<resources>
    <string name="app_name">My Git</string>
    <string name="feature_1">功能1</string>
    <string name="feature_1_dis">Hello World</string>
    <string name="feature_2">功能2</string>
    <string name="feature_2_dis">Hello Android</string>
    <string name="feature_4">功能4</string>
    <string name="feature_4_dis">Hello</string>
    <string name="feature_11">功能11</string>
    <string name="feature_12">功能12</string>
    <string name="feature_13">功能13</string>
    <string name="feature_14">功能14</string>
    <string name="feature_15">功能15</string>
    <string name="feature_22">功能22</string>
</resources>
