<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bob.mygit.MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_feature_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_1"
        android:onClick="feature1"
        />

    <Button
        android:id="@+id/btn_feature_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_2"
        android:onClick="feature2"
        />
    <Button
        android:id="@+id/btn_feature_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_4"
        android:onClick="feature4"
        />

    <Button
        android:id="@+id/btn_feature_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_11"
        android:onClick="feature11"
        />
    <Button
        android:id="@+id/btn_feature_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_12"
        android:onClick="feature12"
        />

    <Button
        android:id="@+id/btn_feature_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_13"
        android:onClick="feature13"
        />
    <Button
        android:id="@+id/btn_feature_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_14"
        android:onClick="feature14"
        />

    <Button
        android:id="@+id/btn_feature_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_15"
        android:onClick="feature15"
        />
    <Button
        android:id="@+id/btn_feature_22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_22"
        android:onClick="feature22"
        />



</LinearLayout>
